# conan_poc

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
profiles/: jetson  mypc  raspberry
proto/: animal.proto
src/: flycheck_test1.plist  test1.cpp
